--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -3,20 +3,12 @@ services:
   app:
     image: webdevops/php-apache-dev:7.4
     user: application
+    container_name: gh_magento2
     external_links:
       - dev_mariadb:mariadb
     networks:
       default:
         ipv4_address: 172.18.0.111
-    environment:
-      - WEB_ALIAS_DOMAIN=magento.vm
-      - WEB_DOCUMENT_ROOT=/app/pub
-      - PHP_DATE_TIMEZONE=EST
-      - PHP_DISPLAY_ERRORS=1
-      - PHP_MEMORY_LIMIT=2048M
-      - PHP_MAX_EXECUTION_TIME=300
-      - PHP_POST_MAX_SIZE=500M
-      - PHP_UPLOAD_MAX_FILESIZE=1024M
     extra_hosts: &appextrahosts
       - "app:172.18.0.111"
       # - "redis:172.18.0.1"
@@ -31,6 +23,14 @@ services:
       - "443"
       - "22"
     environment:
+      WEB_ALIAS_DOMAIN: "magento.vm"
+      WEB_DOCUMENT_ROOT: "/app/pub"
+      PHP_DATE_TIMEZONE: "EST"
+      PHP_DISPLAY_ERRORS: 1
+      PHP_MEMORY_LIMIT: "2048M"
+      PHP_MAX_EXECUTION_TIME: "300"
+      PHP_POST_MAX_SIZE: "500M"
+      PHP_UPLOAD_MAX_FILESIZE: "1024M"
       VIRTUAL_HOST: "magento.vm"
       VIRTUAL_PORT: "443"
       PHP_XDEBUG_ENABLED: 1
@@ -48,6 +48,7 @@ services:
 
   elasticsearch:
     image: markoshust/magento-elasticsearch:7.9.3-1
+    container_name: gh_elasticsearch
     ports:
       - "9200:9200"
       - "9300:9300"
