--- a/docker/magento.env
+++ b/docker/magento.env
@@ -24,3 +24,5 @@ MYSQL_INTEGRATION_DATABASE=magento_integration_tests
 MYSQL_INTEGRATION_USER=dev
 MYSQL_INTEGRATION_PASSWORD=secret
 MYSQL_INTEGRATION_HOST=mariadb
+
+REDIS_SERVER=172.18.0.113
