update prod base

--- a/.gitignore
+++ b/.gitignore
@@ -33,103 +33,40 @@ atlassian*
 /.php_cs
 /.php_cs.cache
 /grunt-config.json
-/pub/media/styles.css
-/pub/media/.htaccess
+/pub/media/*.*
+!/pub/media/.htaccess
 /pub/media/attribute/*
-/pub/media/attribute/.htaccess
-/pub/media/customer_address/.htaccess
+!/pub/media/attribute/.htaccess
 /pub/media/analytics/*
 /pub/media/catalog/*
-/pub/media/catalog/.htaccess
+!/pub/media/catalog/.htaccess
 /pub/media/customer/*
-/pub/media/customer/.htaccess
+!/pub/media/customer/.htaccess
 /pub/media/downloadable/*
-/pub/media/downloadable/.htaccess
+!/pub/media/downloadable/.htaccess
 /pub/media/favicon/*
 /pub/media/import/*
-/pub/media/import/.htaccess
+!/pub/media/import/.htaccess
+/pub/media/logo/*
 /pub/media/custom_options/*
-/pub/media/custom_options/.htaccess
+!/pub/media/custom_options/.htaccess
 /pub/media/theme/*
 /pub/media/theme_customization/*
-/pub/media/theme_customization/.htaccess
+!/pub/media/theme_customization/.htaccess
 /pub/media/wysiwyg/*
-/pub/media/wysiwyg/.htaccess
+!/pub/media/wysiwyg/.htaccess
 /pub/media/tmp/*
-/pub/media/tmp/.htaccess
+!/pub/media/tmp/.htaccess
 /pub/media/captcha/*
 /pub/media/sitemap/*
-/pub/media/sitemap/.htaccess
+!/pub/media/sitemap/.htaccess
 /pub/static/*
-/pub/static/.htaccess
+!/pub/static/.htaccess
 
 /var/*
-/var/.htaccess
+!/var/.htaccess
 /vendor/*
-/vendor/.htaccess
+!/vendor/.htaccess
 /generated/*
-/generated/.htaccess
+!/generated/.htaccess
 .DS_Store
-
-#Ignore base magento2
-/dev
-/app/etc/*
-!/app/etc/di.xml
-/app/autoload.php
-/app/bootstrap.php
-/app/.htaccess
-/pub/.htaccess
-/lib
-/setup
-/phpserver
-/pub/media/mageplaza/search/default_0.js
-/pub/opt/magento/var/resource_config.json
-/pub/errors/.htaccess
-/pub/errors/default/css/styles.css
-/pub/errors/default/images/i_msg-*.gif
-/pub/errors/default/images/logo.gif
-/pub/errors/default/images/favicon.ico
-/pub/errors/default/404.phtml
-/pub/errors/default/503.phtml
-/pub/errors/default/nocache.phtml
-/pub/errors/default/page.phtml
-/pub/errors/default/report.phtml
-/pub/errors/404.php
-/pub/errors/503.php
-/pub/errors/design.xml
-/pub/errors/local.xml.sample
-/pub/errors/noCache.php
-/pub/errors/processor.php
-/pub/errors/processorFactory.php
-/pub/errors/report.php
-/pub/.user.ini
-/pub/cron.php
-/pub/get.php
-/pub/health_check.php
-/pub/index.php
-/pub/static.php
-/bin/*
-/.htaccess.sample
-/.php_cs.dist
-/.user.ini
-/.editorconfig
-/composer.json
-/composer.lock
-/LICENSE.txt
-/LICENSE_AFL.txt
-/nginx.conf.sample
-/package.json.sample
-/grunt-config.json.sample
-/Gruntfile.js.sample
-/COPYING.txt
-/auth.json.sample
-/.htaccess
-*.md
-!/README_MGEE.md
-!/docker/*.md
-/.ftpquota
-/home.htm
-/index.html_
-/backup/*.sql.gz
-/backup/*.tar.gz
-/backup/*.sql
