Update Porto Add Makefile Revert composer.json and composer.lock from 2c4da54d01208b883b358e9cf1e2d9d5f55749dd"

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -5,7 +5,7 @@ services:
     user: application
     container_name: gh_magento2
     external_links:
-      - dev_mariadb:mariadb
+      - dev_mariadb:dev_mariadb
     networks:
       default:
         ipv4_address: 172.18.0.111
