--- a/docker/magento.env
+++ b/docker/magento.env
@@ -13,7 +13,7 @@ MAGENTO_TIMEZONE=America/New_York
 ES_HOST=elasticsearch
 ES_PORT=9200
 
-MYSQL_HOST=mariadb
+MYSQL_HOST=dev_mariadb
 MYSQL_ROOT_PASSWORD=root
 MYSQL_DATABASE=dev_magento
 MYSQL_USER=dev
@@ -23,6 +23,6 @@ MYSQL_INTEGRATION_ROOT_PASSWORD=root
 MYSQL_INTEGRATION_DATABASE=magento_integration_tests
 MYSQL_INTEGRATION_USER=dev
 MYSQL_INTEGRATION_PASSWORD=secret
-MYSQL_INTEGRATION_HOST=mariadb
+MYSQL_INTEGRATION_HOST=dev_mariadb
 
 REDIS_SERVER=172.18.0.113
