--- a/.gitignore
+++ b/.gitignore
@@ -18,6 +18,8 @@ atlassian*
 /app/etc/config.php
 /app/etc/env.php
 /app/code/Magento/TestModule*
+/app/code/__MACOSX
+/app/code/__MACOSX/*
 /lib/internal/flex/uploader/.actionScriptProperties
 /lib/internal/flex/uploader/.flexProperties
 /lib/internal/flex/uploader/.project
